根据UI封装响应组件

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="shortcut icon" href="${ require('./src/assets/images/favicon.ico') }">
     <title>${ htmlWebpackPlugin.options.title }</title>
-    <!-- <script>var GLOBLE_BASE = '<%= "\<%=basePath %\>" %>'</script> -->
+    <script>var GLOBLE_BASE = '${htmlWebpackPlugin.options.basePath}'</script>
   </head>
   <body>
     <div id="app"></div> 
